# perfprof.py

./: .gitignore  LICENSE  README.md  TODO  examples.py  perfprof.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
examples/: example.csv  example.py
src/perfprof/: __init__.py  perfprof.py
tests/: test_perfprof.py
