[metadata]
name = perfprof
version = 0.11
author = Daniel Steck
author_email = daniel.m.steck@gmail.com
description = A Python package for performance profiles as defined by Dolan and More.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = profile, benchmark, performance, algorithms, optimization, Dolan, More
license = MIT license
url = https://github.com/dmsteck/perfprof.py
project_urls =
    Bug Tracker = https://github.com/dmsteck/perfprof.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
